# internal/model/certificate_id.go
@@ -1,0 +1,8 @@
+package model
+
+// CertificateId - is an interface that describes information about certificate id
+type CertificateId struct {
+	Action    string
+	Id        uint64
+	Timestamp int64
+}
