# pkg/ocp-certificate-api/ocp-certificate-api.pb.gw.go
@@ -225,60 +225,6 @@ func local_request_OcpCertificateApi_UpdateCertificateV1_0(ctx context.Context, 
 
 }
 
-func request_OcpCertificateApi_RemoveCertificateV1_0(ctx context.Context, marshaler runtime.Marshaler, client OcpCertificateApiClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq RemoveCertificateV1Request
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["certificate_id"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "certificate_id")
-	}
-
-	protoReq.CertificateId, err = runtime.Uint64(val)
-
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "certificate_id", err)
-	}
-
-	msg, err := client.RemoveCertificateV1(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
-	return msg, metadata, err
-
-}
-
-func local_request_OcpCertificateApi_RemoveCertificateV1_0(ctx context.Context, marshaler runtime.Marshaler, server OcpCertificateApiServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq RemoveCertificateV1Request
-	var metadata runtime.ServerMetadata
-
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["certificate_id"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "certificate_id")
-	}
-
-	protoReq.CertificateId, err = runtime.Uint64(val)
-
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "certificate_id", err)
-	}
-
-	msg, err := server.RemoveCertificateV1(ctx, &protoReq)
-	return msg, metadata, err
-
-}
-
 // RegisterOcpCertificateApiHandlerServer registers the http handlers for service OcpCertificateApi to "mux".
 // UnaryRPC     :call OcpCertificateApiServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -397,29 +343,6 @@ func RegisterOcpCertificateApiHandlerServer(ctx context.Context, mux *runtime.Se
 		}
 
 		forward_OcpCertificateApi_UpdateCertificateV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
-	mux.Handle("DELETE", pattern_OcpCertificateApi_RemoveCertificateV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		var stream runtime.ServerTransportStream
-		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := local_request_OcpCertificateApi_RemoveCertificateV1_0(rctx, inboundMarshaler, server, req, pathParams)
-		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_OcpCertificateApi_RemoveCertificateV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -564,41 +487,19 @@ func RegisterOcpCertificateApiHandlerClient(ctx context.Context, mux *runtime.Se
 
 	})
 
-	mux.Handle("DELETE", pattern_OcpCertificateApi_RemoveCertificateV1_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
-		ctx, cancel := context.WithCancel(req.Context())
-		defer cancel()
-		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-		resp, md, err := request_OcpCertificateApi_RemoveCertificateV1_0(rctx, inboundMarshaler, client, req, pathParams)
-		ctx = runtime.NewServerMetadataContext(ctx, md)
-		if err != nil {
-			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
-			return
-		}
-
-		forward_OcpCertificateApi_RemoveCertificateV1_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
-
-	})
-
 	return nil
 }
 
 var (
-	pattern_OcpCertificateApi_MultiCreateCertificatesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_MultiCreateCertificatesV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "certificates", "list"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_CreateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_CreateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_GetCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificate", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_GetCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificates", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_OcpCertificateApi_ListCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_OcpCertificateApi_UpdateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificate"}, "", runtime.AssumeColonVerbOpt(true)))
-
-	pattern_OcpCertificateApi_RemoveCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "certificate", "certificate_id"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_OcpCertificateApi_UpdateCertificateV1_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"v1", "certificates"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
@@ -611,6 +512,4 @@ var (
 	forward_OcpCertificateApi_ListCertificateV1_0 = runtime.ForwardResponseMessage
 
 	forward_OcpCertificateApi_UpdateCertificateV1_0 = runtime.ForwardResponseMessage
-
-	forward_OcpCertificateApi_RemoveCertificateV1_0 = runtime.ForwardResponseMessage
 )
