# swagger/api.swagger.json
@@ -11,7 +11,43 @@
     "application/json"
   ],
   "paths": {
-    "/v1/certificate": {
+    "/v1/certificates": {
+      "get": {
+        "operationId": "OcpCertificateApi_ListCertificateV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiListCertificateV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpCertificateApi"
+        ]
+      },
       "post": {
         "operationId": "OcpCertificateApi_CreateCertificateV1",
         "responses": {
@@ -73,103 +109,7 @@
         ]
       }
     },
-    "/v1/certificate/{certificate_id}": {
-      "get": {
-        "operationId": "OcpCertificateApi_GetCertificateV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGetCertificateV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "certificate_id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpCertificateApi"
-        ]
-      },
-      "delete": {
-        "operationId": "OcpCertificateApi_RemoveCertificateV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiRemoveCertificateV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "certificate_id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpCertificateApi"
-        ]
-      }
-    },
-    "/v1/certificates": {
-      "get": {
-        "operationId": "OcpCertificateApi_ListCertificateV1",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiListCertificateV1Response"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/runtimeError"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "limit",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "uint64"
-          },
-          {
-            "name": "offset",
-            "in": "query",
-            "required": false,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "OcpCertificateApi"
-        ]
-      },
+    "/v1/certificates/list": {
       "post": {
         "operationId": "OcpCertificateApi_MultiCreateCertificatesV1",
         "responses": {
@@ -200,6 +140,37 @@
           "OcpCertificateApi"
         ]
       }
+    },
+    "/v1/certificates/{certificate_id}": {
+      "get": {
+        "operationId": "OcpCertificateApi_GetCertificateV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiGetCertificateV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "certificate_id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "OcpCertificateApi"
+        ]
+      }
     }
   },
   "definitions": {
@@ -220,6 +191,9 @@
         },
         "link": {
           "type": "string"
+        },
+        "isDeleted": {
+          "type": "boolean"
         }
       }
     },
@@ -227,7 +201,7 @@
       "type": "object",
       "properties": {
         "certificate": {
-          "$ref": "#/definitions/apiCertificate"
+          "$ref": "#/definitions/apiNewCertificate"
         }
       },
       "title": "Create"
@@ -266,7 +240,7 @@
         "certificates": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/apiCertificate"
+            "$ref": "#/definitions/apiNewCertificate"
           }
         }
       },
@@ -284,10 +258,21 @@
         }
       }
     },
-    "apiRemoveCertificateV1Response": {
+    "apiNewCertificate": {
       "type": "object",
       "properties": {
-        "removed": {
+        "userId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "created": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "link": {
+          "type": "string"
+        },
+        "isDeleted": {
           "type": "boolean"
         }
       }
